--- a/composer.json
+++ b/composer.json
@@ -23,19 +23,19 @@
     "require": {
         "php": "^7.2",
         "prolix/serializer": "2.1.*",
-        "symfony/dependency-injection": "^3.3 || ^4.0",
-        "symfony/framework-bundle": "^3.0 || ^4.0"
+        "symfony/dependency-injection": "^3.3 || ^4.0 || ^5.0",
+        "symfony/framework-bundle": "^3.0 || ^4.0 || ^5.0"
     },
     "require-dev": {
-        "doctrine/orm": "^2.4",
-        "phpunit/phpunit": "^6.0",
-        "symfony/expression-language": "^3.0 || ^4.0",
-        "symfony/finder": "^3.0 || ^4.0",
-        "symfony/form": "^3.0 || ^4.0",
-        "symfony/stopwatch": "^3.0 || ^4.0",
+        "doctrine/orm": "^2.7",
+        "phpunit/phpunit": "^8.5",
+        "symfony/expression-language": "^3.0 || ^4.0 || ^5.0",
+        "symfony/finder": "^3.0 || ^4.0 || ^5.0",
+        "symfony/form": "^3.0 || ^4.0 || ^5.0",
+        "symfony/stopwatch": "^3.0 || ^4.0 || ^5.0",
         "symfony/twig-bundle": "*",
-        "symfony/validator": "^3.0 || ^4.0",
-        "symfony/yaml": "^3.0 || ^4.0"
+        "symfony/validator": "^3.0 || ^4.0 || ^5.0",
+        "symfony/yaml": "^3.0 || ^4.0 || ^5.0"
     },
     "suggest": {
         "jms/di-extra-bundle": "Required to get lazy loading (de)serialization visitors, ^1.3",
